inou/prp/tests/errors/readonly_attr_max.prp
/*
:name: readonly_attr_max
:type: error
:error: settable only through a type|cannot write
*/

// `max`/`min` may only be set through a TYPE (`:signed(max=,min=)`, `:uN`/`:sN`),
// never via an attribute write. Enforced by upass/semacheck (goal 1h).

mut x:signed:[max=3] = 1 // locate_error_here
cassert(x == 1)
